--- a/web/blog/2025-05-07-roadmap.md
+++ b/web/blog/2025-05-07-roadmap.md
@@ -1,6 +1,6 @@
 ---
 slug: roadmap
-title: StelLang Roadmap: What's Next?
+title: "StelLang Roadmap: What's Next?"
 authors: Mahesh
 tags: [StelLang, roadmap, future, features]
 ---
