--- a/web/blog/2025-07-01-use-cases.md
+++ b/web/blog/2025-07-01-use-cases.md
@@ -1,6 +1,6 @@
 ---
 slug: use-cases
-title: Real-World Use Cases and Success Stories with StelLang
+title: "Real-World Use Cases and Success Stories with StelLang"
 authors: Mahesh
 date: 2025-07-01
 tags: [StelLang, use cases, success, real world]
